2011-05-06  Robby Stephenson  <robby@periapsis.org>

	* Added icon cache to improve performance with large images
	  (Patch from Pedro Miguel Carvalho, Bug 272583).

2011-05-01  Robby Stephenson  <robby@periapsis.org>

	* Changed image loading to use known id instead of recalculating, improves performance.

2011-04-10  Robby Stephenson  <robby@periapsis.org>

	* Improved performance for loading and sorting large collections.
	* Released Tellico 2.3.3.

2011-04-04  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with loans not being updated for removed entries (Bug 270129).

2011-03-21  Robby Stephenson  <robby@periapsis.org>

	* Fixed crashing bug for editing some values (Bug 269044).

2011-03-19  Robby Stephenson  <robby@periapsis.org>

	* Fixed editing existing filters (Bug 268829).

2011-03-07  Robby Stephenson  <robby@periapsis.org>

	* Added Manga search for AnimeNfo.

2011-02-27  Robby Stephenson  <robby@periapsis.org>

	* Fixed parsing bug with AnimeNfo results.

2011-02-23  Regis Boudin

	* Updated videodev include for compatibility with Linux kernel 2.6.38+.

2011-02-21  Robby Stephenson  <robby@periapsis.org>

	* Added data source for douban.com.

2011-02-19  Robby Stephenson  <robby@periapsis.org>

	* Added data source fetcher for filmaster.com.

2011-02-18  Regis Boudin

	* Fixed build with GCC 4.6.

2011-02-13  Robby Stephenson  <robby@periapsis.org>

	* Added check for duplicate bibtex keys (Bug 245225).

2011-02-02  Robby Stephenson  <robby@periapsis.org>

	* Added capability to import ADS format for z39.50 sources.

2011-01-11  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with parsing empty table values (Bug 261108).

2011-01-03  Robby Stephenson  <robby@periapsis.org>

	* Fixed parsing bug with IMDb results (Bug 262036).

2010-12-12  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 2.3.2.

2010-12-11  Robby Stephenson  <robby@periapsis.org>

	* Updated Bibtex handler to translate ~ to non-breaking space.
