@@ -4,6 +4,9 @@ Custom Fields=alttitle,imdb
 [AnimeNfo.com]
 Custom Fields=alttitle,episodes,origtitle,distributor,animenfo,animenfo-rating
 
+[TMDB FR]
+Locale=fr
+
 [GCstar Video]
 CollectionType=3
 Plugin=Amazon (US)
